--- a/Data_retrival.Rmd
+++ b/Data_retrival.Rmd
@@ -161,9 +161,9 @@ summary(all_fc.lm)
 plot(all_fc.lm)
 
 # Post-hoc test
-TukeyHSD(all_fc.anova) 
-#summary(aov(FecalValue~as.factor(County_Code), fecal_total))
-#TukeyHSD(aov(FecalValue~as.factor(County_Code), fecal_total))
+#TukeyHSD(all_fc.anova) -- error
+summary(aov(FecalValue~as.factor(County_Code), fecal_total))
+TukeyHSD(aov(FecalValue~as.factor(County_Code), fecal_total))
 
 Fecal.Totals.all.plot <- ggplot(fecal_total, aes(x = County_Code, y = FecalValue)) +
   geom_boxplot() +
@@ -172,12 +172,18 @@ Fecal.Totals.all.plot <- ggplot(fecal_total, aes(x = County_Code, y = FecalValue
   ylim(0, 10000) #might need to reset the y axis limits again
 print(Fecal.Totals.all.plot)
 
-fecalc.kw <- kruskal.test(fecal_total$County_Code ~ fecal_total$FecalValue)
-fecalc.kw #chi-squared statistics = 3716.5, p-valye < 2.2e-16
+fecalc.kw <- kruskal.test(fecal_total$FecalValue ~ fecal_total$County_Code)
+fecalc.kw #chi-squared statistics = 33768, p-valye < 2.2e-16
+
+# There are two functions to run the Dunn Test -post tests
+#dunn.test(fecal_total$FecalValue, fecal_total$County_Code, kw = T, 
+ #          table = F, list = T, method = "holm", altp = T)   #From package dunn.test
+#dunnTest(fecal_total$FecalValue, fecal_total$County_Code)    
 ```
 
 ### Data for Individual Counties
-```{r}
+## Greene County
+```{r, Greene County}
 ##Greene County
 #had one of the highest ranking fecal colimform data in all of N.C. some samples over 10,000 cfu/100ml
 
@@ -186,8 +192,11 @@ fecalc.kw #chi-squared statistics = 3716.5, p-valye < 2.2e-16
 Greene.processed <- left_join(Green_sample_results, Green_station, by= "MonitoringLocationIdentifier")
 
 # Set date to date format
-Greene.processed$ActivityStartDate <- as.Date(Greene.processed$ActivityStartDate, format ="%m/%d/%Y")
-view(Greene.processed)
+Greene.processed$ActivityStartDate <- as.Date(Greene.processed$ActivityStartDate, format ="%m/%d/%y")
+Greene.processed$ActivityStartDate <-format(Greene.processed$ActivityStartDate, "%y%m%d")
+create.early.dates <-(function(d){paste0(ifelse(d>191231,"19", "20"),d)})
+Greene.processed$ActivityStartDate <-create.early.dates(Greene.processed$ActivityStartDate)
+Greene.processed$ActivityStartDate<- as.Date(Greene.processed$ActivityStartDate, format= "%Y%m%d")
 
 #data-wrangling
 Greene_fecal <- Greene.processed%>%
@@ -203,42 +212,57 @@ Greene.F.coli.plot <- ggplot(Greene_fecal, aes(x = Date)) +
        y = expression("Fecal coliforms filtered to 0.7 " * mu *m *  " (cfu / 100 ml)")) 
 print(Greene.F.coli.plot)
 
-year.obs <- Greene_fecal %>%
+#yearly changes in data
+Greene.year.obs <- Greene_fecal %>%
   mutate(year = year(Date)) %>%
   group_by(year) %>%
-  select(-Date) %>%
-  summarize_all(funs(sum(!is.na(.))))
-coli.year.summaries <- Greene_fecal %>%
+  select(-Date) 
+
+Greene.coli.year.summaries <- Greene_fecal %>%
   mutate(year = year(Date)) %>%
   group_by(year) %>%
   select(year, Fecal_Coliform_Value) %>%
   summarize_all(funs(Median = median(., na.rm = T),
                  quant25 = quantile(., .25, na.rm = T),
                  quant75 = quantile(., .75, na.rm = T)))
-coli.years <- ggplot(coli.year.summaries, aes(x = year)) +
+
+Greene.coli.years <- ggplot(Greene.coli.year.summaries, aes(x = year)) +
   geom_ribbon(aes(ymin = quant25, ymax = quant75), alpha = 0.3) +
   geom_line(aes(y = Median)) +
   scale_x_continuous(name = "Year")+
                      #breaks = c(1,2,3,4,5,6,7,8,9,10,11,12)) +
-  ylim(0, 10000)+
+  ylim(0, 2000)+
     labs(y = "Total coliforms (cfu / 100 ml)") 
-print(coli.years)
+print(Greene.coli.years)
+
+# monthly changes in data
+Greene.monthly.obs <- Greene_fecal %>%
+  mutate(month = month(Date)) %>%
+  group_by(month) %>%
+  select(-Date)
+  
+Greene.coli.monthly.summaries <- Greene_fecal %>%
+  mutate(month = month(Date)) %>%
+  group_by(month) %>%
+  select(month, Fecal_Coliform_Value) %>%
+  summarize_all(funs(Median = median(., na.rm = T),
+                 quant25 = quantile(., .25, na.rm = T),
+                 quant75 = quantile(., .75, na.rm = T)))
+
+Greene.coli.seasons <- ggplot(Greene.coli.monthly.summaries, aes(x = month)) +
+  geom_ribbon(aes(ymin = quant25, ymax = quant75), alpha = 0.3) +
+  geom_line(aes(y = Median)) +
+  scale_x_continuous(name = "Month",
+                     breaks = c(1,2,3,4,5,6,7,8,9,10,11,12)) +
+    labs(y = "Fecal coliforms (cfu / 100 ml)") 
+print(Greene.coli.seasons)
 
 ```
 
 
-```{r parameters}
+```{r, Pitt County}
 
 
-#All E. Coli Parameters (parm_cd from  USGS)
-# 31633,31648,31682,31683,31684,31689,31691,31693, 31750, 31812,31813,31815,31816,31822,31830,31831,31832,31833,31838, 31889, 31896
-
-# 31633,31648,31682,31683,31684,31689,31691,31693,31750,31812,31813,31815,31816,31822,31830,31831,31832,31833,31838,31839,31896, 50275, 50278, 50466, 50467, 50468, 51762, 51763,63156, 84385, 90901, 90902, 99407, 99419, 99596
-# yields 272 sites in N.C.
-
-#   All Fecal Coliform (parm_cd from USGS)
-# 31613, 31615, 31616, 31617, 31619, 31621, 31625, 31685, 31687, 50469, 61215, 84383, 99406, 99418
-# yields 360 sites in N.C.
 
 ```
 
@@ -247,8 +271,10 @@ print(coli.years)
 You can also embed plots, for example:
 
 ```{r pressure, echo=FALSE}
-plot(pressure)
 
+#   All Fecal Coliform (parm_cd from USGS)
+# 31613, 31615, 31616, 31617, 31619, 31621, 31625, 31685, 31687, 50469, 61215, 84383, 99406, 99418
+# yields 360 sites in N.C.
 #```{r , echo=FALSE, fig.cap="Sample locations from 1990 to 2018", out.width = '90%'}
 #knitr::include_graphics("./Output/StudyRegionMap.pdf") -- for knitting a JPEG/PDF/PNG into document
 ```
