Exploratory analaysis of fecal coliform exceeding 200 cfu/100ml

--- a/Data_retrival.Rmd
+++ b/Data_retrival.Rmd
@@ -10,6 +10,7 @@ library(dataRetrieval)
 library(tidyverse)
 library(cowplot)
 library(lubridate)
+library(viridis)
 library(readr)
 library(dplyr)
 library(agricolae)
@@ -22,9 +23,11 @@ This is an R Markdown document. Markdown is a simple formatting syntax for autho
 When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 ```{r}
 #manually import all NC counties with fecal coliform samples
+NC_County_Raw <-read_csv("./NC_County_FC_station_all.csv")
+results_all_NC_counties_fc <- read_csv("./results_all_NC_counties_fc.csv")
 
 #join the two datasets together via the "MonitoringLocationIdentifier" column
-All_county_fc <- left_join(NC_County_FC_station_all , results_all_NC_counties_fc, by= "MonitoringLocationIdentifier")
+All_county_fc <- left_join(NC_County_Raw , results_all_NC_counties_fc, by= "MonitoringLocationIdentifier")
 summary(All_county_fc)
 head(All_county_fc$ActivityStartDate)
 is.Date(All_county_fc$ActivityStartDate)
@@ -68,11 +71,11 @@ view(fecal_total_counties)
 fecal_total_counties$County_Code <-as.factor(fecal_total_counties$County_Code)
 #notes: Date=ActivityStateDate returned NA values, column is Date factor
 
-Total.fc.plot <- ggplot(fecal_total_counties, aes(x = County_Code, y= FecalValue, color = County_Code)) +
+Total.fc.plot <- ggplot(fecal_total_counties, aes(x = County_Code, y= FecalValue)) +
   geom_point() +
   ylim(0, 50000) +
   scale_color_viridis_c(end =0.8, option = "magma" )+
-  labs(x = "N.C. County", y = "Fecal coliforms (cfu / 100 ml)", color = "N.C. Counties") +
+  labs(x = "N.C. County", y = "Fecal coliforms (cfu / 100 ml)") +
   theme(legend.position = "top")
 print(Total.fc.plot)
 
@@ -81,8 +84,40 @@ Total.fc.plot <- ggplot(fecal_total_counties, aes(x = County_Code, color = Count
   geom_line(aes(y = FecalValue)) +
   ylim(0, 50000) +
   labs(x = "N.C. County", y = "Fecal coliforms (cfu / 100 ml)") +
-  theme(legend.position = "top")
+  theme(legend.position = "right")
 print(Total.fc.plot)
+
+
+Exceeding.Limits.fc.<- fecal_total_counties %>%
+  filter(FecalValue > 200)
+dim(Exceeding.Limits.fc.)
+
+Exceeding.Limits.fc.<- ggplot(fecal_total_counties, aes(x = County_Code, color = County_Code)) +
+  geom_line(aes(y = FecalValue)) +
+  ylim(200, 50000) +
+  labs(x = "N.C. County", y = "Fecal coliforms (cfu / 100 ml)") +
+  theme(legend.position = "right")
+print(Total.fc.plot)
+
+#exploratory bar graph
+ggplot(fecal_total_counties, aes(x =County_Code)) +
+  geom_bar() 
+
+#exploratory box plot
+ggplot(fecal_total_counties) +
+  geom_boxplot(aes(x = County_Code, y = FecalValue))+
+  ylim(0, 10000)
+
+#exploratory scatter plot
+ggplot(fecal_total_counties) +
+  geom_point(aes(x = County_Code, y = FecalValue, color = County_Code))+
+  ylim(0, 10000)+
+  labs(theme(legend.position = "right"))
+
+ggplot(fecal_total_counties) +
+  geom_point(aes(x = Date, y = FecalValue))+
+  ylim(0, 10000)
+              
 #from the plot we can see all the N.C. Counties with fecal coliform data above 10,000 cfu/100ml
 # 11 counties with 10,000 or higher concentrations of fecal coliform is surface waters
 #mecklendburg county 119, madison county 115, harnett county 85, Green county 79, Duplin County 61, Davie County 59, Buncombe County 21, Durham County 63, Stanley county 167, Pitt county 147, no name county 109
@@ -108,7 +143,10 @@ anova(county_fc_lm) #no significant P- value (p = 1) for this analysis. No count
 ```{r}
 ##dataset that contains both NWIS and STORET data
 
-#import dataset manually
+#import dataset
+all_fecal_coliform_data_results <-read_csv("./all_fecal_coliform_data_results.csv")
+all_fecal_coliform_stations <-read_csv("./all_fecal_coliform_stations.csv")
+
 #join the two datasets together via the "MonitoringLocationIdentifier" column
 All_fc <- left_join(all_fecal_coliform_data_results , all_fecal_coliform_stations, by= "MonitoringLocationIdentifier")
 
@@ -136,6 +174,26 @@ All.fc.plot <- ggplot(All_fc, aes(x = County_Code)) +
   labs(x = "N.C. County", y = "Fecal coliforms (cfu / 100 ml)") +
   theme(legend.position = "top")
 print(Total.fc.plot)
+
+
+#exploratory bar graph
+ggplot(fecal_total, aes(x =County_Code)) +
+  geom_bar() 
+
+#exploratory box plot
+ggplot(fecal_total) +
+  geom_boxplot(aes(x = County_Code, y = FecalValue))+
+  ylim(0, 10000)
+
+#exploratory scatter plot
+ggplot(fecal_total) +
+  geom_point(aes(x = County_Code, y = FecalValue, color = County_Code))+
+  ylim(0, 10000)+
+  labs(theme(legend.position = "right"))
+
+ggplot(fecal_total) +
+  geom_point(aes(x = Date, y = FecalValue))+
+  ylim(0, 10000)
 
 fecal_total$County_Code <- as.numeric(fecal_total$County_Code)
 
@@ -178,7 +236,7 @@ Fecal.Totals.all.plot <- ggplot(fecal_total, aes(x = County_Code, y = FecalValue
   geom_boxplot() +
   theme(axis.text.x = element_text(angle = 45, hjust = 1)) + #45 degree angle of text
   labs(x = "N.C. County Code", y = "Fecal coliforms (cfu / 100 ml)") +
-  ylim(0, 10000) #might need to reset the y axis limits again
+  ylim(0, 2500) #might need to reset the y axis limits again
 print(Fecal.Totals.all.plot)
 
 fecalc.kw <- kruskal.test(fecal_total$FecalValue ~ fecal_total$County_Code)
@@ -642,6 +700,10 @@ Wayne.coli.seasons <- ggplot(Wayne.coli.monthly.summaries, aes(x = month)) +
                      breaks = c(1,2,3,4,5,6,7,8,9,10,11,12)) +
     labs(y = "Fecal coliforms (cfu / 100 ml)") 
 print(Wayne.coli.seasons)
+```
+
+#how to write a caption for your figures
+```{r, echo=FALSE,error=FALSE, message=FALSE, warning=FALSE, fig.cap="Yearly median concentrations of cadmium and lead in *Mytilus edulis* ICES monitoring data from 1979 to 2018."}
 ```
 
 
